# dynamixel2-rs

./: Cargo.toml  id_inspection.csv  id_inspection_full.csv
examples/rp2040/: Cargo.toml  README.md
examples/rp2040/src/: main.rs  transport.rs
src/: bus.rs  device.rs
src/instructions/: fast_bulk_read.rs  fast_sync_read.rs  mod.rs
src/packet/: instruction.rs  mod.rs  status.rs
tests/: id_inspection.rs  id_inspection_data.csv
