[package]
name = "rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

adafruit-kb2040 = "0.8.0"

dynamixel2 = { path = "../..", default-features = false }
nb = "1.1.0"